--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/fraudwheeldrive/Employee-Tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "inquirer": "^8.0.0",
+    "mysql2": "^2.2.5",
+    "package": "^1.0.1"
   },
   "devDependencies": {
     "jest": "^26.6.3"
