--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/fraudwheeldrive/Employee-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "inquirer": "^8.0.0",
     "mysql": "^2.18.1",
